# dummy-generator

./: pyproject.toml  thunder-collection_test schema.json
project/: project.yml
supabase/: manage.py
supabase/config/: asgi.py  urls.py  wsgi.py
supabase/config/settings/: db.py  local.py  orm.py
supabase/core/dummy/: apps.py
supabase/core/resources/: models.py
supabase/core/resources/management/commands/: generate_faker_data.py
supabase/core/resources/migrations/: 0001_initial.py  0002_fakefunctionsdata_is_function.py
supabase/fixtures/: provider_schema.json
