[tool.poetry]
name = "dofunctions"
version = "0.1.0"
description = ""
authors = ["flyingdutchman <rede@asklora.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker-marketdata = "^0.4"
faker-vehicle = "^0.2.0"
faker-music = "^0.4"
faker = "^19.5.0"
supabase = "^1.0.4"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
django = "^4.2.5"
psycopg2-binary = "^2.9.7"


[tool.poetry.group.misc.dependencies]
open-interpreter = "^0.1.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.linting.dependencies]
black = "^23.9.1"
ruff = "^0.0.290"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
